testsuite/tests/typecheck/should_fail/UnliftedNewtypesFamilyKindFail1.stderr

UnliftedNewtypesFamilyKindFail1.hs:11:31: error:
    • Expected a type, but ‘5’ has kind ‘GHC.Num.Natural.Natural’
    • In the kind ‘5’
      In the data family declaration for ‘DF’
